--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -18,7 +18,7 @@
     <RadioGroup
         android:id="@+id/home_radio_group"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="44dp"
         android:layout_alignParentBottom="true"
         android:background="@color/white"
         android:orientation="horizontal">
@@ -31,8 +31,8 @@
             android:button="@null"
             android:drawableTop="@drawable/selector_home"
             android:gravity="center"
-            android:paddingBottom="5dp"
-            android:paddingTop="5dp"
+            android:paddingBottom="2dp"
+            android:paddingTop="3dp"
             android:text="首页"
             android:textColor="@drawable/selector_home_text"
             android:textSize="12sp" />
@@ -45,8 +45,8 @@
             android:button="@null"
             android:drawableTop="@drawable/selector_tail_order"
             android:gravity="center"
-            android:paddingBottom="5dp"
-            android:paddingTop="5dp"
+            android:paddingBottom="2dp"
+            android:paddingTop="3dp"
             android:text="实时尾单"
             android:textColor="@drawable/selector_home_text"
             android:textSize="12sp" />
@@ -59,8 +59,8 @@
             android:button="@null"
             android:drawableTop="@drawable/selector_forum"
             android:gravity="center"
-            android:paddingBottom="5dp"
-            android:paddingTop="5dp"
+            android:paddingBottom="2dp"
+            android:paddingTop="3dp"
             android:text="发现"
             android:textColor="@drawable/selector_home_text"
             android:textSize="12sp" />
@@ -73,8 +73,8 @@
             android:button="@null"
             android:drawableTop="@drawable/selector_shop"
             android:gravity="center"
-            android:paddingBottom="5dp"
-            android:paddingTop="5dp"
+            android:paddingBottom="2dp"
+            android:paddingTop="3dp"
             android:text="积分商城"
             android:textColor="@drawable/selector_home_text"
             android:textSize="12sp" />
@@ -87,8 +87,8 @@
             android:button="@null"
             android:drawableTop="@drawable/selector_my"
             android:gravity="center"
-            android:paddingBottom="5dp"
-            android:paddingTop="5dp"
+            android:paddingBottom="2dp"
+            android:paddingTop="3dp"
             android:text="个人中心"
             android:textColor="@drawable/selector_home_text"
             android:textSize="12sp" />
