--- a/app/src/main/res/layout/fragment_forum.xml
+++ b/app/src/main/res/layout/fragment_forum.xml
@@ -107,6 +107,7 @@
                             <android.support.v7.widget.RecyclerView
                                 android:id="@+id/forum_recycle"
                                 android:layout_width="match_parent"
+                                android:layout_marginTop="10dp"
                                 android:layout_height="wrap_content"
                                 android:nestedScrollingEnabled="false" />
                         </RelativeLayout>
