--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -235,13 +235,13 @@
                     android:background="@color/white"
                     app:tabSelectedTextColor="@color/orange" />
 
-                <ImageView
-                    android:id="@+id/home_more2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:src="@mipmap/ic_home_more2" />
+                <!--<ImageView-->
+                    <!--android:id="@+id/home_more2"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_alignParentRight="true"-->
+                    <!--android:layout_centerVertical="true"-->
+                    <!--android:src="@mipmap/ic_home_more2" />-->
             </RelativeLayout>
         </FrameLayout>
     </com.youweihui.tourismstore.view.CustomScrollView>
