--- a/app/src/main/res/layout/item_forum.xml
+++ b/app/src/main/res/layout/item_forum.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="250dp"
     android:layout_marginLeft="10dp"
-    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp"
     android:layout_marginRight="10dp"
     android:background="@drawable/shp_forum">
 
