--- a/app/src/main/res/layout/activity_tail_list.xml
+++ b/app/src/main/res/layout/activity_tail_list.xml
@@ -32,6 +32,9 @@
                         android:id="@+id/tail_list_top_img"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentTop="true"
                         android:scaleType="fitXY" />
 
                     <ImageView
@@ -43,6 +46,7 @@
                         android:src="@mipmap/ic_back2"/>
 
                     <TextView
+                        android:id="@+id/tail_list_edit"
                         android:layout_width="match_parent"
                         android:layout_height="30dp"
                         android:layout_marginLeft="30dp"
@@ -51,10 +55,10 @@
                         android:layout_marginRight="50dp"
                         android:background="@drawable/shp_search_bg"
                         android:drawableLeft="@mipmap/ic_home_search"
-                        android:gravity="center"
                         android:paddingLeft="6dp"
-                        android:textColor="@color/white"
-                        android:textSize="12sp" />
+                        android:gravity="center_vertical"
+                        android:drawablePadding="5dp"
+                        android:textColor="@color/white" />
 
                     <TextView
                         android:layout_width="match_parent"
