--- a/app/src/main/res/layout/fragment_forum.xml
+++ b/app/src/main/res/layout/fragment_forum.xml
@@ -118,6 +118,7 @@
                     android:id="@+id/forum_relative2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@color/white"
                     android:visibility="invisible">
 
                     <android.support.design.widget.TabLayout
