--- a/app/src/main/res/layout/adapter_shop_list.xml
+++ b/app/src/main/res/layout/adapter_shop_list.xml
@@ -25,6 +25,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:gravity="center"
+            android:text="更多产品"
             android:textColor="@color/text_color" />
 
         <View
