--- a/app/src/main/res/layout/fragment_shop2.xml
+++ b/app/src/main/res/layout/fragment_shop2.xml
@@ -12,17 +12,56 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/shop_recycle"
             android:layout_width="match_parent"
-            android:overScrollMode="never"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:overScrollMode="never" />
 
-        <android.support.design.widget.TabLayout
-            android:id="@+id/shop_top_tab"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:visibility="invisible"
-            app:tabIndicatorColor="@color/orange"
-            app:tabMode="scrollable"
-            app:tabSelectedTextColor="@color/orange" />
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:id="@+id/shop_top_linear"
+                android:layout_width="match_parent"
+                android:layout_height="44dp"
+                android:background="@color/white"
+                android:visibility="invisible"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal">
+
+                <View
+                    android:layout_width="40dp"
+                    android:layout_height="0.5dp"
+                    android:layout_gravity="center"
+                    android:background="@color/gray" />
+
+                <TextView
+                    android:id="@+id/shop_more_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:gravity="center"
+                    android:text="更多产品"
+                    android:textColor="@color/text_color" />
+
+                <View
+                    android:layout_width="40dp"
+                    android:layout_height="0.5dp"
+                    android:layout_gravity="center"
+                    android:background="@color/gray" />
+            </LinearLayout>
+
+            <android.support.design.widget.TabLayout
+                android:id="@+id/shop_top_tab"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:visibility="invisible"
+                app:tabIndicatorColor="@color/orange"
+                app:tabMode="scrollable"
+                app:tabSelectedTextColor="@color/orange" />
+        </LinearLayout>
+
     </FrameLayout>
 </LinearLayout>
