--- a/app/src/main/res/layout/adapter_shop_list.xml
+++ b/app/src/main/res/layout/adapter_shop_list.xml
@@ -1,60 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_height="200dp">
 
-    <LinearLayout
+    <ImageView
+        android:id="@+id/item_shop_img"
         android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:background="@color/white"
-        android:gravity="center_horizontal"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:layout_above="@+id/item_shop_text"
+        android:layout_marginLeft="7dp"
+        android:layout_marginRight="7dp"
+        android:layout_marginTop="7dp"
+        android:scaleType="fitXY" />
 
-        <View
-            android:layout_width="40dp"
-            android:layout_height="0.5dp"
-            android:layout_gravity="center"
-            android:background="@color/gray" />
-
-        <TextView
-            android:id="@+id/shop_more_title"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:gravity="center"
-            android:text="更多产品"
-            android:textColor="@color/text_color" />
-
-        <View
-            android:layout_width="40dp"
-            android:layout_height="0.5dp"
-            android:layout_gravity="center"
-            android:background="@color/gray" />
-    </LinearLayout>
-
-    <android.support.design.widget.TabLayout
-        android:id="@+id/shop_more_tab"
+    <TextView
+        android:id="@+id/item_shop_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
-        app:tabGravity="fill"
-        app:tabIndicatorColor="@color/orange"
-        app:tabMaxWidth="0dp"
-        app:tabMode="fixed"
-        app:tabSelectedTextColor="@color/orange" />
+        android:layout_above="@+id/shop_text2"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
+        android:gravity="center"
+        android:textColor="@color/text_color"
+        android:textSize="13dp" />
+
+    <TextView
+        android:id="@+id/item_shop_integral"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="15dp"
+        android:textColor="@color/orange"
+        android:textSize="13dp" />
+
+    <TextView
+        android:id="@+id/shop_text2"
+        android:layout_width="50dp"
+        android:layout_height="18dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="5dp"
+        android:layout_marginRight="7dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/shp_shop_bg"
+        android:gravity="center"
+        android:text="兑换"
+        android:textColor="@color/white"
+        android:textSize="11dp" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="0.3dp"
-        android:background="@color/line"/>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/adapter_shop_list_recycle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:background="@color/white" />
-</LinearLayout>
+        android:layout_alignParentBottom="true"
+        android:background="@color/line" />
+</RelativeLayout>
